app/assets/stylesheets/quizzes_show.scss
@import 'shared/variables';
@import 'shared/mixins';


#banner-ad {
	width: 100%;
	position: absolute;
	top: 44px;
	left: 0;
	height: 44px;
	border-radius: 8px;
	display: none;
}

.content-container.quiz-take {
	padding: 30px 10px 10px 10px;
	margin-top: 44px;
	.side-content {
		display: none;
	}
	img {
		border-radius: 8px;
	}
	.quiz-description {
		margin-top: 20px;
	}
	.quiz-info {
		margin-top: 20px;
		margin-bottom: 20px;
		.quiz-user {
			@include flexbox;
			@include align-items(center);
			img {
				height: 30px;
				width: 30px;
				border-radius: 30px;
			}
			p {
				color: $grey;
				margin-left: 10px;
			}
		}
		.quiz-subinfo {
			margin-top: 10px;
			@include flexbox;
			@include justify-content(space-between);
			p {
				color: $grey;
			}
			.quiz-type {
				font-weight: 800;
			}
		}
	}
	.social-medias {
		margin-top: 20px;
		@include flexbox;
		@include justify-content(space-between);
		position: relative;
		.link-box {
			position: absolute;
			height: 44px;
			width: calc((100% - 30px) / 4);
			top: 54px;
			right: 0px;
			display: none;
			input {
				width: 100%;
				padding: 0px 12px;
				line-height: 44px;
				height: 44px;
				border: 1px solid $dark-outline;
				border-radius: 8px;
			}
		}
		.social-media {
			height: 44px;
			width: calc((100% - 30px) / 4);
			cursor: pointer;
			line-height: 44px;
			border-radius: 8px;
			@include flexbox;
			@include align-items(center);
		}
		img, p {
			margin: 0 auto;
			color: white;
			font-size: 16px;
			height: 20px; 
			width: auto;
		}
		p {
			height: auto;
		}
	}
	.items {
		.item.text-style {
			.question-header {
				@include flexbox;
				@include align-items(baseline);
				.item-text {
					width: calc(100% - 40px);
				}
			}
			.question-header.flipcard {
				margin-top: 30px;
			}
			.item-number {
				position: static;
				margin-right: 10px; 
				margin-top: 10px;
			}

		}
		.item {
			position: relative;
			.item-number {
				width: 30px;
				height: 30px;
				border: 2px solid white;
				border-radius: 30px;
				top: 10px;
				left: 10px;
				position: absolute;
				background: $red;
				color: white;
				text-align: center;
				line-height: 30px;
				z-index: 1;
				font-weight: 800;
			}
			.title-text {
				display: none;
			}
			width: 100%;
			.image-container.flippable {
				background: $dark-grey;
			}
			.answer .image-container {
				height: calc((((100vw - 30px) / 2) - 20px) * 2 / 3);
			}
			.answer.image-style {
				.image-container {
					margin-top: 0px;
				}
				.answer-text {
					text-align: center;
				}
			}
			.image-container {
				position: relative;
				height: calc((100vw - 20px) * 2 / 3);
				margin-top: 30px;
				border-radius: 8px;
				@include flexbox;
				@include align-items(center);
				padding: 0px 20px;
				.card-text {
					text-align: center;
					color: white;
					font-size: 20px;
					font-weight: 600;
					margin: 0 auto;
					width: calc(100% - 40px);
					word-wrap: break-word;
					z-index: 10;
				}
				.image-credit {
					position: absolute;
					bottom: 10px;
					right: 0px;
					color: white;
					background: rgba(0,0,0,0.3);
					height: 15px;
					font-size: 9px;
					line-height: 15px;
					padding: 0px 5px;
					text-align: center;
				}
				.item-description {
					font-size: 15px;
					font-weight: 400;
				}
			}
			img {
				height: calc((100vw - 20px) * 2 / 3);
				width: 100%;
				position: absolute;
				top: 0;
				left: 0;

			}
		}
		p {
			line-height: 24px;
			font-weight: 600;
			font-size: 15px;
			margin-top: 10px;
		}
		p.answer-text {
			margin-top: 0px;
		}
		p.item-description {
			font-weight: 400;
		}
		.answers {
			@include flexbox;
			@include flex-wrap(wrap);
			@include justify-content(space-between);
			.answer {
				width: calc((100% - 10px) / 2);
				background: white;
				border: 1px solid $dark-outline;
				cursor: pointer;
				padding: 10px;
				border-radius: 8px;
				margin: 10px 0px;
				img {
					width: 100%;
					height: calc((((100vw - 30px) / 2) - 20px) * 2 / 3);
					margin: 0;
				}
			}
			.answer.quiz.incorrect.selected {
				background: $light-blue;
				border: 1px solid $blue;
			}
			.answer.correct.selected {
				background: $light-green;
				border: 1px solid $green;
			}
			.answer.incorrect.selected {
				background: $light-pink;
				border: 1px solid $pink;
			}
			.answer.text-style {
				width: 100%;
				height: auto;
				line-height: 44px;
				min-height: 44px;
				padding: 0px 12px;
				@include flexbox;
				@include align-items(center);
			}
		}
	}
	.result.sharer {
		display: block;
		.result-social-message {
			margin-top: 0px;
		}
	}
	.result {
		margin: 60px 0px;
		border: 1px solid $dark-outline;
		border-radius: 8px;
		padding: 20px 10px;
		display: none;
		background: white;
		p.quiz.score {
			display: none;
		}
		p.score {
			color: $green;
			font-weight: 800;
			margin-bottom: 10px;
			span {
				color: $green;
			}
		}
		p {
			line-height: 24px;
			font-weight: 600;
			font-size: 15px;
		} 
		img.result-image {
			margin-top: 10px;
			width: 100%;
			height: calc((100vw - 40px) * 2 / 3);
		}
		.result-social-message {
			margin-top: 20px 
		}
	}
}

.list.content-container.quiz-take {
	.items .item {
		.item-title {
			margin-top: 30px; 
			@include flexbox;
			@include align-items(baseline);
		}
		.item-number {
			position: static;
			margin-right: 10px;
		}
		.title-text {
			display: block;
			width: calc(100% - 40px);
			font-weight: 600;
		}
		.item-text {
			display: none;
		}
		.image-container {
			margin-top: 10px;
		}
	}
}

@media (min-width: 960px) {

	#banner-ad {
		top: 80px;
		left: calc(50vw - 470px);
		width: 940px;
		height: 120px;
		display: block;
	}
	.content-container.quiz-take, .content-container.main-container {
		margin-top:  60px;
		padding: 60px calc(50vw - 470px);
		@include flexbox;
		@include justify-content(space-between);
		.side-content {
			width: 300px;
			display: block;
			height: auto;
			.side-ad {
				width: 100%;
				height: 580px;
				border-radius: 8px;
			}
			.divider {
				background: $light-outline;
				height: 2px;
				width: 150px;
				margin: 30px auto;
			}
			.recommendations {
				h3 {
					font-weight: 800;
				}
				.img {
					height: 100px;
					margin-top: 20px;
					width: 300px;
					border-radius: 8px;
				}
				p {
					margin-top: 10px;
					font-weight: 600;
				}
			}
		}

		.social-medias {
			.social-media {
				height: 30px;
			}
			.link-box {
				height: 30px;
				top: 40px;
				input {
					height: 30px;
				}
			}
		}
		.quiz-main {
			width: 620px;
			.items {
				.item.text-style {
					.question-header {
						margin-top: 60px;
					}
				}
				.item.image-style {
					.item-number {
						margin-top: 0px;
					}
				}
				.item {
					.question-header {
						.item-text {
							width: calc(100% - 50px);
							margin-top: 15px;
							margin-bottom: 10px;
						}
						h2 {
							margin-top: 20px;
							margin-bottom: 10px;
							width: calc(100% - 50px);
						}

					}
					.item-description {
						font-size: 18px;
						font-weight: 400;
						margin-top: 20px;
						line-height: 1.3;
					}
					.answer .image-container {
						height: 186px;
					}
					.image-container {
						height: calc(620px * 2 / 3);
						padding: 0px 40px;
						.card-text {
							width: calc(100% - 80px);
							z-index: 2;
							font-size: 28px;
						}
					}
					.image-container.flippable {
						cursor: pointer;
						background: $dark-grey;
					}
					.item-number {
						height: 40px;
						width: 40px;
						line-height: 40px;
						font-size: 24px;
						z-index: 1;
						margin-bottom: 10px;
						top: 20px;
						left: 20px;
					}
					img {
						height: calc(620px * 2 / 3);
					}
					p {
						font-size: 24px;
						line-height: 36px;
					}
				}
				.answers {
					.answer {
						width: 300px;
						img {
							height: 186px;
							width: 280px;
						}
						p {
							font-size: 18px;
							margin: 0;
						}
					}
					.answer.text-style {
						width: 100%;
						padding: 12px;
						p {
							line-height: 18px;
						}
					}
				}
			}
			.result {
				padding: 40px 20px;
				img.result-image {
					width: 580px;
					height: 386px;
				}
				p.score {
					margin-bottom: 40px;
					font-size: 18px;
				}
				p {
						font-size: 24px;
						line-height: 36px;
				}
				.social-media p {
					font-size: 16px;
					height: auto;
					line-height: 30px;
					font-weight: 400;
				}
			}
		}
	}

	.list.content-container.quiz-take {
		.items .item {
			.question-header {
				margin-top: 0px !important;
			}
			.item-title {
				margin-top: 40px;
			}
			.item-number {
				margin-right: 20px;
			}
			.title-text {
				width: calc(100% - 50px);
				font-size: 24px;
			}
			.image-container {
				margin-top: 20px;
			}
		}
		.items .item.image-style {
			.item-title {
				margin-top: 60px;
			}
		}
	}
}

.bottom-ads {
	margin: 60px 0px;
	@include flexbox;
	@include flex-wrap(wrap);
	@include justify-content(space-between);
	width: 620px;
	.bottom-ad {
		width: 300px;
		margin-bottom: 20px;
		height: 250px;
		border-radius: 8px;
	}
}

